Adapt for Rails 3.2 and bootstrap-sass
We still use Bootstrap 2, so there are some minor changes in the views, too. And we have a separate gem for Font Awesome.

--- a/app/views/csp_report/csp_reports/report_by_source.html.haml
+++ b/app/views/csp_report/csp_reports/report_by_source.html.haml
@@ -20,7 +20,7 @@
             =link_to "By Source Document URI", csp_reports_report_by_source_path
 
 .csp-report.row.padding-navbar
-  .csp-report.offset2.span8
+  .csp-report
     %h1
       Breaches by Source Document URI
 
