--- a/app/views/csp_report/csp_reports/index.html.haml
+++ b/app/views/csp_report/csp_reports/index.html.haml
@@ -19,7 +19,7 @@
             =link_to "By Source Document URI", csp_reports_report_by_source_path
 
 .csp-report.row.padding-navbar
-  .csp-report.offset2.span8
+  .csp-report
     %table.csp-report.report-table.table.table-striped.table-condensed
       %thead
         %tr.csp-report.report-row
@@ -56,8 +56,8 @@
             =link_to('Delete violation', csp_report_path(report.id), method: 'delete')
 
 .csp-report.row
-  .csp-report.offset2.span8
+  .csp-report
 
-    %p.csp-report.btn.btn-danger
-      =link_to "Delete All", csp_reports_destroy_all_path, 
+    %p.csp-report
+      =link_to "Delete All", csp_reports_destroy_all_path, class: "btn btn-danger",
         data: {confirm: "Are you sure you want to delete all the violation reports?"}
