Improve style and structure of index view.

--- a/app/assets/stylesheets/csp_report/csp_report.css.sass
+++ b/app/assets/stylesheets/csp_report/csp_report.css.sass
@@ -17,3 +17,8 @@
 // 
 .csp-report.padding-navbar
   padding-top: 45px
+
+.csp-report.report-cell.nowrap
+  white-space: nowrap
+.csp-report.report-cell.uri
+  word-break: break-word
